fix: add HQ logo and fix camp name

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<img src="/assets/img/appicon.png" alt="" width="200px">
+<img src="/assets/general/logo.png" alt="" width="200px">
 <div class="back" >
     <img src="/assets/general/Watan-logo.png" alt="" width="40px">
 </div>
