--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<img src="/assets/img/appicon.png" alt="" width="180px">
+<img src="/assets/general/logo.png" alt="" width="180px">
 <form autocomplete="off" #f="ngForm" (ngSubmit)="onSubmit($event)">
     
  
