--- a/src/app/admin-layout/admin-layout.component.scss
+++ b/src/app/admin-layout/admin-layout.component.scss
@@ -1,7 +1,8 @@
 ion-menu ion-content {
     --padding-top: 20px;
     --padding-bottom: 20px;
-  
+    color: var(--color-primary);
+width: auto;
     --background: var(--ion-item-background, var(--ion-background-color, #fff));
   }
   
@@ -34,12 +35,27 @@ ion-menu ion-content {
   
   ion-menu.md ion-item {
     --padding-start: 18px;
-  
+    ion-label{
+
+      color: var(--color-primary);
+    }
+  &:hover{
+    ion-label{
+
+      color: var(--color-secondry);
+    }
+
+  }
     margin-right: 10px;
   
     border-radius: 0 50px 50px 0;
   
     font-weight: 500;
+    ion-icon{
+      
+
+      // filter: saturate(25);
+    }
   }
   
   ion-menu.md ion-item.selected {
@@ -82,6 +98,7 @@ ion-menu ion-content {
   ion-menu.ios ion-item ion-icon {
     font-size: 24px;
     color: #73849a;
+
   }
   
   ion-menu.ios ion-item.selected ion-icon {
