--- a/src/app/admin-panel/page-content-items/form/page-content-items-form.component.html
+++ b/src/app/admin-panel/page-content-items/form/page-content-items-form.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="model">
+<form class="form" *ngIf="model">
     <mat-form-field appearance="fill">
         <mat-label>Choose camp</mat-label>
         <mat-select name="campId" [(ngModel)]="model.campId">
@@ -9,21 +9,27 @@
     </mat-form-field>
 
     <div class="actions">
-        <button (click)="addVideo()" color="warn" mat-raised-button>{{'Add Video'|text}}</button>
-        <button (click)="addPdf()" color="primary" mat-raised-button>{{'Add Pdf'|text}}</button>
-        <button (click)="addHtml()" color="accent" mat-raised-button>{{'Add Html'|text}}</button>
+        <button (click)="addVideo()">
+            <img src="/assets/icons/Youtube.png" alt="">
+            {{'Add Video'|text}}</button>
+        <button (click)="addPdf()">
+            <img src="/assets/icons/Pdf.png" alt="">
+            {{'Add Pdf'|text}}</button>
+        <button (click)="addHtml()">
+            <img src="/assets/icons/html.png" alt="">
+            {{'Add Html'|text}}</button>
     </div>
 
     <div class="page-items">
         <div class="page-item" *ngFor="let item of model?.items;let i = index;">
             <p>
-                <button (click)="deleteItem(i)" color="warn" mat-button>{{'delete'|text}}</button>
                 <mat-form-field appearance="outline">
-                  <mat-label>{{'Name'|text}}</mat-label>
-                  <input name="name" matInput placeholder="{{'Name'|text}}" [(ngModel)]="item.name">
-                  <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-                  <mat-hint></mat-hint>
+                    <mat-label>{{item.type | text}}{{' name'|text}}</mat-label>
+                    <input name="name" matInput placeholder="{{'Name'|text}}" [(ngModel)]="item.name">
+                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                    <mat-hint></mat-hint>
                 </mat-form-field>
+                <button (click)="deleteItem(i)" color="warn" mat-button>{{'delete'|text}}</button>
               </p>
             <div *ngIf="item.type == 'video'" class="video">
                 <mat-form-field  appearance="outline">
@@ -52,6 +58,8 @@
 
 
 </form>
+<div class="submition">
 
-<button mat-raised-button [color]="'primary'" (click)="submit()">Save</button>
-<button mat-raised-button (click)="goBack()">Cancel</button>
+    <button mat-raised-button [color]="'primary'" (click)="submit()">Save</button>
+    <button mat-raised-button (click)="goBack()">Cancel</button>
+</div>
