fix: add language button

--- a/src/app/admin-panel/page-content-items/form/page-content-items-form.component.html
+++ b/src/app/admin-panel/page-content-items/form/page-content-items-form.component.html
@@ -10,10 +10,10 @@
 
     <div class="actions">
         <button (click)="addVideo()">
-            <img src="/assets/icons/Youtube.png" alt="">
+            <img src="/assets/icons/Youtube-icon.png" alt="">
             {{'Add Video'|text}}</button>
         <button (click)="addPdf()">
-            <img src="/assets/icons/Pdf.png" alt="">
+            <img src="/assets/icons/Pdf-icon.png" alt="">
             {{'Add Pdf'|text}}</button>
         <button (click)="addHtml()">
             <img src="/assets/icons/html.png" alt="">
