--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -110,3 +110,23 @@ max-width: 20px;
 height: auto;
   }
 }
+.lang{
+  padding: 4px;
+  min-width: 60px;
+  height: 30px;
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-primary);
+  border: 1px solid var(--color-secondry);
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  border-radius: 10px 0 0 10px ;
+  img{
+max-width: 20px;
+height: auto;
+  }
+}
