--- a/src/app/admin-panel/permissions/admin-permissions/admin-permissions.component.html
+++ b/src/app/admin-panel/permissions/admin-permissions/admin-permissions.component.html
@@ -1,1 +1,43 @@
+<div class="permissions-container">
 
+    <mat-accordion class="example-headers-align" multi>
+
+        <mat-expansion-panel *ngFor="let p of pages">
+            <mat-expansion-panel-header>
+                <mat-panel-title>
+                    {{p.text}}
+                </mat-panel-title>
+
+            </mat-expansion-panel-header>
+
+
+            <mat-form-field *ngIf="p.record" appearance="outline">
+                <mat-label>Roles</mat-label>
+                <mat-select name="roles" multiple [(ngModel)]="p.record.roles">
+                    <mat-option *ngFor="let role of roles" [value]="role.name">{{role.name}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <div class="children">
+                <ng-container *ngFor="let child of p.children">
+                    <h4>{{child.text}}</h4>
+
+                    <mat-form-field *ngIf="child.record" appearance="outline">
+                        <mat-label>Roles</mat-label>
+                        <mat-select name="roles" multiple [(ngModel)]="child.record.roles">
+                            <mat-option *ngFor="let role of roles" [value]="role.name">{{role.name}}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </ng-container>
+            </div>
+
+
+
+        </mat-expansion-panel>
+
+    </mat-accordion>
+
+    <button mat-raised-button [color]="'primary'" (click)="submit()">Save</button>
+
+
+</div>
