--- a/src/app/admin-layout/admin-layout.component.html
+++ b/src/app/admin-layout/admin-layout.component.html
@@ -7,35 +7,46 @@
                     <ion-list-header>
                         Conference
                     </ion-list-header>
-                    <ion-menu-toggle autoHide="false" *ngFor="let p of appPages; let i = index">
-                        <ion-item [class.highlighted]="p.open" [routerLink]="'en'+p.prefix+p.url"
-                            (click)="p.open = !p.open" routerLinkActive="selected" routerDirection="root"
-                            detail="false">
-                            <ion-icon slot="start" [name]="p.icon + '-outline'"></ion-icon>
-                            <ion-label>
-                                {{p.title}}
-                            </ion-label>
-                        </ion-item>
-
-                        <ion-list [ngStyle]="{'padding-left':'1rem'}" *ngIf="p.open&&p.children?.length">
-                            <ion-menu-toggle autoHide="false">
-                                <ion-item *ngFor="let sub of p.children" (click)="navigate(p,sub)"
-                                    routerLinkActive="selected" routerDirection="root">
-                                    <ion-icon slot="start" [name]="sub.icon + '-outline'"></ion-icon>
-                                    <ion-label>
-                                        {{sub.title}}
-                                    </ion-label>
-                                </ion-item>
-                            </ion-menu-toggle>
-                        </ion-list>
-
-                    </ion-menu-toggle>
+                    <ng-container *ngFor="let p of appPages; let i = index">
+                        <ion-menu-toggle autoHide="false" *ngIf="p.show">
+                            <ion-item [class.highlighted]="p.open" [routerLink]="'en'+p.prefix+p.url" (click)="navigate(p)"
+                                (click)="p.open = !p.open" routerLinkActive="selected" routerDirection="root"
+                                detail="false">
+                                <ion-icon slot="start" [name]="p.icon "></ion-icon>
+                                <ion-label>
+                                    {{p.title}}
+                                </ion-label>
+                            </ion-item>
+    
+                            <ion-list [ngStyle]="{'padding-left':'1rem'}" *ngIf="p.open&&p.children?.length">
+                                <ion-menu-toggle autoHide="false">
+                                    <ion-item *ngFor="let sub of p.children" (click)="navigate(p,sub)"
+                                        routerLinkActive="selected" routerDirection="root">
+                                        <ion-icon slot="start" [name]="sub.icon + '-outline'"></ion-icon>
+                                        <ion-label>
+                                            {{sub.title}}
+                                        </ion-label>
+                                    </ion-item>
+                                </ion-menu-toggle>
+                            </ion-list>
+    
+                        </ion-menu-toggle>
+                    </ng-container>
 
                     <ion-menu-toggle *ngIf="user"  (click)="goToComplaints()" autoHide="false">
                         <ion-item  detail="false">
                             <ion-icon slot="start" name="person"></ion-icon>
                             <ion-label>
                                 Complaints
+                            </ion-label>
+                        </ion-item>
+                    </ion-menu-toggle>
+
+                    <ion-menu-toggle *ngIf="user"  (click)="goToNotifications()" autoHide="false">
+                        <ion-item  detail="false">
+                            <ion-icon slot="start" name="notifications"></ion-icon>
+                            <ion-label>
+                                Notifications
                             </ion-label>
                         </ion-item>
                     </ion-menu-toggle>
