--- a/src/app/home/bens/health-care/health-care.component.scss
+++ b/src/app/home/bens/health-care/health-care.component.scss
@@ -49,7 +49,7 @@
 }
 
 .btns {
-box-shadow: 0 -1px 5px #a1a1a1;
+    box-shadow: 0 -1px 5px #a1a1a1;
     width: 100%;
     display: flex;
     height: 100%;
@@ -71,14 +71,26 @@ box-shadow: 0 -1px 5px #a1a1a1;
 
         .left,
         .right {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             background-color: #EFEFEF;
             border-radius: 10px;
             padding: 10px;
             transition: all 0.2s;
             box-shadow: 0 1px 5px silver;
+            height: 90px;
+            width: 90px;
 
-            
+            img {
+                max-width: 80px;
+                max-height: 80px;
+            }
+
+
+
         }
+
         .selected {
             transform: scale(1.1);
             background-color: var(--color-primary);
