fix: delete location from camp

--- a/src/app/admin-panel/settings/camp/camp-preview/camp-preview.component.html
+++ b/src/app/admin-panel/settings/camp/camp-preview/camp-preview.component.html
@@ -8,9 +8,9 @@
 <div>
     {{camp?.address}}
 </div>
-<div>
+<!-- <div>
     {{camp?.location}}
-</div>
+</div> -->
 <div>
     {{camp?.lat}}
 </div>
