--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -4,7 +4,8 @@
   display: flex;
   /* place-content: center; */
   gap: 20px;
-  height: 100%;
+  height: 100vh;
+  height: 100dvh;
   /* justify-items: center; */
   align-items: center;
   justify-content: center;
@@ -12,6 +13,7 @@
 
 form {
   transition: all 200ms;
+  overflow: auto;
 
   .selected {
     background-color: var(--color-warning);
@@ -55,10 +57,12 @@ form {
       background-color: #FFFFFF;
       color: var(--color-primary);
     }
-    .sign-in{
+
+    .sign-in {
       border-radius: 10px 0 0 10px;
     }
-    .back{
+
+    .back {
       border-radius: 0 10px 10px 0;
     }
   }
@@ -126,7 +130,9 @@ select:focus-visible {
   outline: 0;
   border: 0;
 }
-
+.white-space{
+  background-color: transparent;
+}
 
 
 // Start | for demo
