--- a/src/app/home/view-content/view-content.component.html
+++ b/src/app/home/view-content/view-content.component.html
@@ -13,7 +13,7 @@
                <img src="/assets/icons/Youtube-icon.png" alt=""> <a (click)="openVideo(it.url)">{{lang=='en'?it.name:it.arName}}</a>
             </div>
             <div *ngIf="it.type == 'pdf'" class="pdf">
-                <img src="/assets/icons/Pdf-icon.png" alt=""><a (click)="openPdf(it.url)">{{lang=='en'?it.name:it.arName}}</a> 
+                <img src="/assets/icons/Pdf-icon.png" alt=""><a (click)="openPdf(it)">{{lang=='en'?it.name:it.arName}}</a> 
             </div>
             <div *ngIf="it.type == 'html'" class="html">
                 <section class="content" [innerHTML]="lang=='en'?it.content:it.arContent"></section>
