fix: add missing pages content and bind profile default values

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -15,13 +15,13 @@
         <button class="normal-btn" (mousedown)="navTo('map')">
             {{'Camp map'| text}}
         </button>
-        <button class="normal-btn" (mousedown)="navTo('')">
+        <button class="normal-btn" (mousedown)="navTo('asas')">
             {{'Sectors and services'|text}}
         </button>
-        <button class="normal-btn" (mousedown)="navTo('')">
+        <button class="normal-btn" (mousedown)="navTo('asccm')">
             {{'Contact camp management'|text}}
         </button>
-        <button class="normal-btn" (mousedown)="navTo('')">
+        <button class="normal-btn" (mousedown)="navTo('acl')">
             {{'Camp location'|text}}
         </button>
     </div>
