--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="avatar">
     <img src="/assets/img/profile/user.png" alt="">
     <div class="user-name">
-        {{isLoggedIn? user?.username??user?.name : 'Guest'}}
+        {{isLoggedIn? user?.name??user?.name : 'Guest'}}
     </div>
 </div>
 
