--- a/src/global.scss
+++ b/src/global.scss
@@ -308,14 +308,31 @@ dynamic-form {
   padding: 10px;
   border: 1px solid var(--color-primary);
   border-radius: 10px;
+
   .content {
 
     p {
       font-size: 0.6em;
-    line-height: 16px;
-    font-family: '29ltbukraregular';
-
+      line-height: 16px;
+      font-family: '29ltbukraregular';
       color: var(--color-primary);
+
+      strong {
+        color: var(--color-primary);
+      }
+    }
+
+    ul,
+    ol {
+      font-size: 0.7em;
+      line-height: 18px;
+      font-family: '29ltbukraregular';
+      color: var(--color-primary);
+
+      li {
+        font-size: 0.6em;
+        line-height: 16px;
+      }
 
       strong {
         color: var(--color-primary);
